New Function " block maker" added

--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGKI5J64MQAUr56U3fPiVX",
+      "authorship_tag": "ABX9TyMrujb/XJ209oUxJpb6GjQt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -149,7 +149,7 @@
         "\n",
         "image_float = image.astype(float)\n",
         "\n",
-        "\n",
+        "levels = 2**8\n",
         "width, height = image.shape\n",
         "\n",
         "image_array = image_float.ravel()\n",
@@ -166,18 +166,18 @@
         "f99 = image_array_sorted[-1*index_clip]\n",
         "\n",
         "\n",
-        "stretched_image = (((image_array - f1)/(f99-f1))*255)\n",
+        "stretched_image = (((image_array - f1)/(f99-f1))*(levels-1))\n",
         "\n",
-        "stretched_clipped = np.clip(stretched_image, 0, 255)\n",
+        "stretched_clipped = np.clip(stretched_image, 0, (levels-1))\n",
         "\n",
         "\n",
         "fig,axs = plt.subplots(1,2,figsize=(10,3))\n",
-        "plt.setp(plt.gcf().get_axes(), xticks=[0, 255], yticks=[])\n",
+        "plt.setp(plt.gcf().get_axes(), xticks=[0, (levels-1)], yticks=[])\n",
         "\n",
-        "axs[0].hist(image_float.ravel(),256)\n",
+        "axs[0].hist(image_float.ravel(),levels)\n",
         "axs[0].set_title(\"Original Histogram\")\n",
         "\n",
-        "axs[1].hist(stretched_clipped, 256)\n",
+        "axs[1].hist(stretched_clipped, levels)\n",
         "axs[1].set_title(\"Stretched Histogram\")\n",
         "\n",
         "\n",
@@ -197,9 +197,9 @@
           "height": 596
         },
         "id": "mM6exx4H-tNK",
-        "outputId": "4338942e-e66a-44d7-cd66-5661f38ab45f"
+        "outputId": "7a299b84-4136-4399-f11b-8fae2e20e2bb"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -242,7 +242,7 @@
         "elif caller().ndim == 2:\n",
         "  image = caller()\n",
         "\n",
-        "levels = 2**8\n",
+        "\n",
         "image_float = image.astype(float)\n",
         "image_float = image\n",
         "\n",
@@ -335,6 +335,81 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Local Histogram Equalization**"
+      ],
+      "metadata": {
+        "id": "I9htJBpS-_AZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def block_maker(image, x_pixel, y_pixel, half_width = 2):\n",
+        "  \n",
+        "    h, w = image.shape\n",
+        "     \n",
+        "    x_index = list(range(x_pixel-half_width, x_pixel+half_width+1))\n",
+        "    x_index = list(filter(lambda x: x > -1 and x < w , x_index))\n",
+        "     \n",
+        "    y_index = list(range(y_pixel-half_width, y_pixel+half_width+1))\n",
+        "    y_index = list(filter(lambda x: x > -1 and x < h , y_index))\n",
+        "   \n",
+        "    block0 = image[y_index,:]\n",
+        "    block  = block0[:,x_index]\n",
+        "\n",
+        "    return block \n"
+      ],
+      "metadata": {
+        "id": "y2--ncsT_Res"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(image[1:10,2:5])"
+      ],
+      "metadata": {
+        "id": "mM1E_M3kGZjI",
+        "outputId": "20776c0a-1a35-433f-8cf7-6ce11fe36d1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[143 142 142]\n",
+            " [146 145 145]\n",
+            " [147 147 146]\n",
+            " [150 149 148]\n",
+            " [152 152 151]\n",
+            " [156 156 154]\n",
+            " [160 159 156]\n",
+            " [161 161 159]\n",
+            " [166 165 162]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np"
+      ],
+      "metadata": {
+        "id": "z5ZRx69QFIi3"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
